[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/GameStateHandler.gd" type="Script" id=1]
[ext_resource path="res://Misc/TextBlinkMat.tres" type="Material" id=2]
[ext_resource path="res://Audio/SFX/pause_sound.wav" type="AudioStream" id=3]
[ext_resource path="res://Sprites/Player.png" type="Texture" id=4]
[ext_resource path="res://Audio/Music/game_start.wav" type="AudioStream" id=5]
[ext_resource path="res://Misc/ArcadeFont.tres" type="DynamicFont" id=6]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 16, 16 )
axis_stretch_horizontal = 1

[sub_resource type="StyleBoxEmpty" id=2]

[node name="Game" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="HUDLayer" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="HUDLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScoreText" type="Label" parent="HUDLayer/HUD"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -96.0
margin_top = 32.0
margin_bottom = 69.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.658824, 0, 0, 1 )
text = "Hi-
 Score"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScore" type="Label" parent="HUDLayer/HUD"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -96.0
margin_top = 64.0
margin_bottom = 96.0
custom_fonts/font = ExtResource( 6 )
text = "999999"
align = 2
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1UP" type="Label" parent="HUDLayer/HUD"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -96.0
margin_top = 120.866
margin_bottom = 157.866
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.658824, 0, 0, 1 )
text = "1-up"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="HUDLayer/HUD"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -96.0
margin_top = 132.698
margin_bottom = 164.698
custom_fonts/font = ExtResource( 6 )
text = "999999"
align = 2
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LivesBar" type="ProgressBar" parent="HUDLayer/HUD"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -96.0
margin_top = 260.343
margin_right = -48.0
margin_bottom = 276.343
rect_scale = Vector2( 2, 2 )
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
max_value = 3.0
step = 1.0
value = 2.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PausedText" type="Label" parent="HUDLayer/HUD"]
visible = false
material = ExtResource( 2 )
anchor_right = 1.0
margin_top = 200.513
margin_bottom = 232.513
custom_fonts/font = ExtResource( 6 )
text = "Pause"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoundText" type="Label" parent="HUDLayer/HUD"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -89.4839
margin_top = 397.032
margin_right = 6.51611
margin_bottom = 429.032
custom_fonts/font = ExtResource( 6 )
text = "Round"
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "Remember, Round is not the level!"
}

[node name="Round" type="Label" parent="HUDLayer/HUD"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -88.0
margin_top = 416.0
margin_bottom = 448.0
custom_fonts/font = ExtResource( 6 )
text = "1"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReadyText" type="Label" parent="HUDLayer/HUD"]
visible = false
margin_left = 117.156
margin_top = 167.156
margin_right = 260.156
margin_bottom = 304.156
custom_fonts/font = ExtResource( 6 )
text = "Player 1


Ready!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverText" type="Label" parent="HUDLayer/HUD"]
visible = false
margin_left = 117.0
margin_top = 167.0
margin_right = 254.0
margin_bottom = 304.0
custom_fonts/font = ExtResource( 6 )
text = "Game


Over"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseSFX" type="AudioStreamPlayer" parent="HUDLayer"]
pause_mode = 2
stream = ExtResource( 3 )
bus = "SFX"

[node name="MusicStream" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 5 )
autoplay = true
bus = "Music"
[connection signal="finished" from="MusicStream" to="." method="_on_MusicStream_finished"]
